--- a/src/DataBaseBundle/Resources/views/Default/signin_success.html.twig
+++ b/src/DataBaseBundle/Resources/views/Default/signin_success.html.twig
@@ -7,7 +7,7 @@
         <h4 class="alert-heading">Vous y êtes presque !</h4>
         <p>Vous allez recevoir un mail de vérification. Une fois que vous aurez vérifié votre compte votre inscription sera validée</p>
         <hr>
-        <p class="mb-0"><a href="http://localhost/La-Toile-Verte/web/app_dev.php" >Retourner à l'accueil</a></p>
+        <p class="mb-0"><a href="{{ path('accueil') }}" >Retourner à l'accueil</a></p>
     </div>
 </div>
 
