--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -23,6 +23,8 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
+    <br/>
   </div>
+  <small style="position:fixed;top:10px;right:10px;"><a href="{{ path('signin') }}" >S'inscrire</a></small>
 </nav>
 {% endblock %}
