--- a/src/DataBaseBundle/Resources/views/Default/signin.html.twig
+++ b/src/DataBaseBundle/Resources/views/Default/signin.html.twig
@@ -16,8 +16,15 @@
         <div class="form-group">
             {{ form_errors(form.email) }}
             {{ form_label(form.email) }}
+            {% if valid %}
             {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
-            <small id="emailHelp" class="form-text text-muted">Votre adresse mail ne sera pas partagée.</small>
+            {% else %}
+            {{ form_widget(form.email, {'attr': {'class': 'form-control is-invalid'}}) }}
+            <div class="invalid-feedback">
+                Cette adresse email est déjà utilisée
+            </div>
+            {% endif %}
+            <small id="emailHelp" class="form-text text-muted">Votre adresse email ne sera pas partagée.</small>
         </div>
         <div class="form-group">
             {{ form_errors(form.password) }}
