--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
     <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="{{ asset('logo.png') }}" alt="La Toile Verte" ></a>
+            <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('logo.png') }}" alt="La Toile Verte" ></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog</a>
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Quizz</a>
                     </li>
                 </ul>
-        
+
                 <br/>
             </div>
             <small style="position:fixed;top:10px;right:10px;"><a href="{{ path('signin') }}" style="color: white;">S'inscrire</a></small>
