--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -5,20 +5,18 @@
         <div class="row">
             <div class="col-lg-1">
             </div>
-            <div class="col-lg-5 rr rr-left">
-                <div>
-                    <h2>Se connecter</h2>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-                </div>
-            </div>
+            <a href="{{ path('connexion') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
+                    <div>
+                        <h2>Se connecter</h2>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                    </div>
+            </a>
 
             <a href="{{ path('signin') }}" class="col-lg-4 rr rr-right" style="text-decoration: none;">
-                <div>
                     <div>
                         <h2>S'inscrire</h2>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
                     </div>
-                </div>
             </a>
         </div>
     </div>
