--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="{{ path('blog') }}">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quizz</a>
@@ -39,8 +39,7 @@
     </header>
         {% block body %}
         {% endblock %}
-    <footer>
-        <div class="container">
+<!-- <footer>
             <div class="row">
                 <div class="col-lg-offset-4 col-lg-6">
                         <h5>A propos</h5>
@@ -56,7 +55,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
         {% block javascripts %}
