changement time line

--- a/src/FrontBundle/Resources/views/Default/blog.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blog.html.twig
@@ -8,8 +8,21 @@
                  </div> <!-- cd-timeline-img -->
 
                  <div  class="cd-timeline-content">
-                   <h1>it s me</h1>
-
+                     <div class="row">
+                        <h1>it s me</h1>
+                     </div>
+                     <div class="row">
+                         <div class="col-lg-12">
+                             </div>
+                     </div>
+                     <div class="row">
+                         <div class="col-lg-3">
+                             <span class="glyphicon">&#xe105;</span>
+                         </div>
+                         <div class="col-lg-3">
+                            nb like
+                         </div>
+                     </div>
                        <span class="cd-date" style="padding-bottom:0px">01/01/01</span>
 
                  </div> <!-- cd-timeline-content -->
