--- a/web/css/timeline/css/style.css
+++ b/web/css/timeline/css/style.css
@@ -256,7 +256,7 @@ Main components
   padding-left: 25px;
   padding-bottom: 0px;
   transition: background 0.5s;
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255,255,255,0.7);
 
   text-decoration: none;
 }
@@ -311,8 +311,8 @@ Main components
   right: 100%;
   height: 0;
   width: 0;
-  border: 7px solid transparent;
-  border-right: 7px solid white;
+  border: 12px solid transparent;
+  border-right: 12px solid white;
 }
 @media only screen and (min-width: 768px) {
   .cd-timeline-content h2 {
@@ -337,8 +337,8 @@ Main components
     width: 39%;
   }
   .cd-timeline-content::before {
-    top: 24px;
-    left: 100%;
+    top: 155px;
+    left: 100.5%;
     border-color: transparent;
     border-left-color:forestgreen ;
   }
@@ -360,9 +360,9 @@ Main components
     border-left: solid 3px forestgreen;
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
-    top: 24px;
+    top: 55%;
     left: auto;
-    right: 100%;
+    right: 100.5%;
     border-color: transparent;
     border-right-color: forestgreen;
   }
