--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -1,18 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'FOSUserBundle::layout.html.twig' %}
 
 {% block body %}
     <div class="container connexion">
         <div class="row">
             <div class="col-lg-1">
             </div>
-            <a href="{{ path('connexion') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
+            <a href="{{ path('fos_user_security_login') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
                     <div>
                         <h2>Se connecter</h2>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
                     </div>
             </a>
 
-            <a href="{{ path('signin') }}" class="col-lg-4 rr rr-right" style="text-decoration: none;">
+            <a href="{{ path('fos_user_registration_register') }}" class="col-lg-4 rr rr-right" style="text-decoration: none;">
                     <div>
                         <h2>S'inscrire</h2>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
