modif mineur css time line

--- a/web/css/timeline/css/style.css
+++ b/web/css/timeline/css/style.css
@@ -3,6 +3,8 @@
 Primary style
 
 -------------------------------- */
+/*
+je suis la modif*/
 html * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
