--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
     <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('logo.png') }}" alt="La Toile Verte" ></a>
+            <a class="navbar-brand" href="{{ path('accueil') }}"><img class="logo" src="{{ asset('logo.png') }}" alt="La Toile Verte" ></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
