mise en page du formulaire inscription

--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -17,8 +17,8 @@
         <div class="site-pusher">
             <header class="header">
                 <nav class="menu" style="">
-                    <a href="{{ path('admin') }}"><h2>Accueil</h2></a>
-                    <a href="{{ path('admin') }}"><h2>Calendrier Top 14</h2></a>
+                    <a href="#"><h2>Accueil</h2></a>
+                    <a href="#"><h2>Calendrier Top 14</h2></a>
                 </nav>
             </header>
                     <div class="site-cache" id="site-cache"></div>
