--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -12,26 +12,37 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
 </head>
 <body>
-<header>
-    <div class="site-container">
-        <div class="site-pusher">
-            <header class="header">
-                <nav class="menu" style="">
-                    <a href="#"><h2>Accueil</h2></a>
-                    <a href="#"><h2>Calendrier Top 14</h2></a>
-                </nav>
-            </header>
-                    <div class="site-cache" id="site-cache"></div>
-                </div>
+<div class="site-container">
+    <div class="site-pusher">
+        <header class="header">
+            <a class="header__icon" id="header__icon"></a>
+            <a href="#" class="header__logo"><img src="{{ asset('logo.png') }}" style="width:50px;height:75px;"></a>
+            <nav class="menu" style="">
+                <a href="#"><h2>Accueil</h2></a>
+                <a href="#"><h2>Calendrier Top 14</h2></a>
+            </nav>
+        </header>
+        <div class="container" style="width: 100%;padding: 0px;">
+            {% block container %}{% endblock %}
+            <div class="container">
+
+                <div class="site-cache" id="site-cache"></div>
             </div>
-</header>
+        </div>
+    </div>
+</div>
 <footer></footer>
 
 
 {% block javascripts %}
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ asset('css_admin/app.js')}}"></script>
 {% endblock %}
 </body>
 </html>
