Ajout de la page connecté

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -22,6 +22,13 @@
     </div>
 {% endblock %}
 
+{% block connected_content %}
+    <div class="container">
+        Connecté oboi
+    </div>
+{% endblock %}
+
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/home.css')}}" />
 {% endblock %}
