Ajout du menu de l'accueil connecté

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -23,8 +23,24 @@
 {% endblock %}
 
 {% block connected_content %}
-    <div class="container">
-        Connecté oboi
+    <div class="container connexion">
+        <div class="row">
+            <div class="col-lg-1">
+            </div>
+            <a href="{{ path('blog') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
+                <div>
+                    <h2>Blog</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </a>
+
+            <a href="#" class="col-lg-4 rr rr-right" style="text-decoration: none;">
+                <div>
+                    <h2>Quizz</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </a>
+        </div>
     </div>
 {% endblock %}
 
