--- a/web/css/connexion.css
+++ b/web/css/connexion.css
@@ -2,10 +2,10 @@
     margin-top: 5%;
     border-radius: 100px 0px 100px 0px;
     border: 3px solid forestgreen;
-    height: 350px;
     text-align: center;
     padding-left: 80px!important;
     padding-right: 80px!important;
+    padding-bottom: 20px!important;
 }
 .formConnexion .label{
     text-align:start;
