--- a/web/css_admin/admin.css
+++ b/web/css_admin/admin.css
@@ -14,23 +14,22 @@ html,body
 a
 {
     text-decoration-line:none;
-    color:inherit}
+    color:white !important;
+}
 a :hover
 {
-    text-decoration-line
-    :none;
+    text-decoration-line:none !important;
+    text-decoration: none !important;
 }
 
-.table>tbody>tr>td,
+.titre{
+    position:absolute !important;
+    top:15px;
+    left:25%;
+    color: White;
 
-.table>tfoot>tr>td,
-.table>thead>tr>td{
-    vertical-align: middle!important;
-    padding: 8px !important;
-    line-height: 8 !important;
-    border-top: 5px solid #FFF !important;
+
 }
-
 .site-content
 {
     padding-top:66px}
@@ -54,7 +53,8 @@ a :hover
 
 .menu
 {
-    float:left}
+    float:left;
+    transition-duration: 1s;}
 
 .menu a
 {
@@ -65,42 +65,11 @@ a :hover
     background-color:#191919;}
 
 
-.site-pusher,.site-container
-{
-    height:100%}
-.with--sidebar .site-container
-{
-    overflow-y:hidden;
-    overflow-x: hidden;
-    text-decoration-line:none;
-}
 .site-container
 {
     overflow-y:auto;
     overflow-x: hidden;
 
-}
-
-.site-pusher
-{
-    -moz-transition-duration:0.3s;
-    -o-transition-duration:0.3s;
-    -webkit-transition-duration:0.3s;
-    transition-duration:0.3s;
-    -moz-transform:translateX(0px);
-    -ms-transform:translateX(0px);
-    -webkit-transform:translateX(0px);
-    transform:translateX(0px);
-    height: 100%}
-
-.site-content
-{
-    position:absolute;
-    top:66px;
-    right:0;
-    left:0;
-    bottom:0;
-    padding-top:0;
 }
 
 .header
@@ -111,10 +80,12 @@ a :hover
 {
     position:relative;
     display:block;
-    float:right;
+    left:25px;
     width:60px;
     height:85px;
-    cursor:pointer}
+    cursor:pointer;
+    transition-duration: 1s;
+}
 
 .header__icon:after
 {
@@ -124,45 +95,118 @@ a :hover
     width:2rem;
     top:22px;
     left:15px;
-    -moz-box-shadow:0 10px 0 1.5px #fab81e,0 20px 0 1.5px #fab81e,0 30px 0 1.5px #fab81e;
-    -webkit-box-shadow:0 10px 0 1.5px #fab81e,0 20px 0 1.5px #fab81e,0 30px 0 1.5px #fab81e;
-    box-shadow:0 10px 0 1.5px #fab81e,0 20px 0 1.5px #fab81e,0 30px 0 1.5px #fab81e
+    box-shadow:0 10px 0 1.5px #FFD700,0 20px 0 1.5px #FFD700,0 30px 0 1.5px #FFD700
 }
 
-.menu
-{
-    position:absolute;
-    right:0;
-    top:0;
-    bottom:0;
-    overflow-y:scroll;
-    -webkit-overflow-scrolling:touch;
-    background-color:#333;
-    width:300px;
-    -moz-transform:translateX(300px);
-    -ms-transform:translateX(300px);
-    -webkit-transform:translateX(300px);
-    transform:translateX(300px)}
+.menu {
+    position: absolute;
+    left: 0;
+    top: 85px;
+    bottom: 0;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    background-color: #333;
+    width: 300px;
+}
 
 .menu a
 {
     display:block;
-    height:40px;
+    animation: elargie 2s;
+    height:50px;
     text-align:center;
-    line-height:40px;}
+    line-height:40px;
+    text-decoration: none;
+    transition-duration: 1s;
+    margin-top: 15px;
+}
+.lienText{}
+.reduit a{
+    animation: reduit 2s;
+    transition-duration: 1s;
+    margin-bottom: 10px;
+    text-align: right;
+}
 
-.with--sidebar .site-pusher
-{
-    -moz-transform:translateX(-250px);
-    -ms-transform:translateX(-250px);
-    -webkit-transform:translateX(-250px);
-    transform:translateX(-250px)}
+.menu .svgIcon{
+    animation: reduit 2s;
+    opacity:0;
+    display: none;
+    transition-duration: 1.1s;
+}
+.reduit{
 
-.with--sidebar .site-cache
-{
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color:rgba(0,0,0,0.6)}
+    transform:scale(1) translateX(-220px);
+    transition-duration: 1s;
+}
+.reduit .svgIcon{
+    display: block;
+    animation: elargie 3s;
+    animation-name: bounceIn;
+    animation-duration: .75s;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    opacity: 1;
+
+    transition-duration: 1.1s;
+}
+@keyframes reduit {
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0;
+    }
+}
+
+@keyframes elargie {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes bounceIn {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    }
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+    20% {
+        -webkit-transform: scale3d(1.1, 1.1, 1.1);
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        -webkit-transform: scale3d(.9, .9, .9);
+        transform: scale3d(.9, .9, .9);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: scale3d(1.03, 1.03, 1.03);
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        -webkit-transform: scale3d(.97, .97, .97);
+        transform: scale3d(.97, .97, .97);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.reduit .lienText{
+    animation: reduit 2s;
+    display: none;
+}
+
+.rotation .header__icon{
+    transform: rotate(360deg) ;
+    transition-duration: 1s;
+}
