--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,9 @@
         {% block stylesheets %}
 
         {% endblock %}
+
+        {% block js %}
+        {% endblock %}
         <link rel="stylesheet" href="{{ asset('css_TemplateBase/main.css') }}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -28,7 +31,7 @@
                         <a class="nav-link" href="{{ path('blog') }}">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quizz</a>
+                        <a class="nav-link" href="{{ path('quiz') }}">Quizz</a>
                     </li>
                 </ul>
 
