ajout twitter page acceuil connecté

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -23,24 +23,9 @@
 {% endblock %}
 
 {% block connected_content %}
-    <div class="container connexion">
-        <div class="row">
-            <div class="col-lg-1">
-            </div>
-            <a href="{{ path('blog') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
-                <div>
-                    <h2>Blog</h2>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-                </div>
-            </a>
-
-            <a href="#" class="col-lg-4 rr rr-right" style="text-decoration: none;">
-                <div>
-                    <h2>Quizz</h2>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-                </div>
-            </a>
-        </div>
+    <div class="twitter">
+        <a class="twitter-timeline"  href="https://twitter.com/search?q=%20%23GreenIT" data-widget-id="923817749377363968">#GreenIT</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 {% endblock %}
 
