--- a/web/css/home.css
+++ b/web/css/home.css
@@ -70,3 +70,12 @@ h2 { margin-top: 20px !important;  color: white !important; }
     transition-duration: 1s;
 
 }
+
+.twitter{
+    position: fixed;
+    top:200px;
+    right:20px;
+    height:505px;
+    border-top: solid 2px forestgreen;
+    border-bottom: solid 2px forestgreen;
+}
