--- a/src/FrontBundle/Resources/views/Default/quiz.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quiz.html.twig
@@ -4,7 +4,7 @@
 <div id="surveyElement">
 </div>
 <script>
-var json = { title: "Product Feedback Survey Example", showProgressBar: "top", pages: [
+var json = { title: 'Product Feedback Survey Example {{ test }}', showProgressBar: "top", pages: [
     {questions: [
         { type: "matrix", name: "Quality", title: "Please indicate if you agree or disagree with the following statements",
             columns: [{ value: 1, text: "Strongly Disagree" },
