correction css sans article et twitter

--- a/src/FrontBundle/Resources/views/Default/blog.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blog.html.twig
@@ -44,7 +44,9 @@
 
         </section> <!-- cd-timeline -->
    {% else %}
-       <h1>Pas d'article disponible</h1>
+       <div class="SansArticle">
+            <h1> Nous sommes désolés mais aucun article n'est disponible</h1>
+       </div>
    {% endif %}
 
 {% endblock %}
