--- a/web/css/home.css
+++ b/web/css/home.css
@@ -73,9 +73,14 @@ h2 { margin-top: 20px !important;  color: white !important; }
 
 .twitter{
     position: fixed;
-    top:200px;
-    right:20px;
-    height:505px;
-    border-top: solid 2px forestgreen;
+    top:110px;
+    right:0px;
+    height:100%;
+    width: 400px;
+    border-left: solid 2px forestgreen;
     border-bottom: solid 2px forestgreen;
+}
+iframe{
+    height: 100%!important;
+    width: 100%!important;
 }
