--- a/web/css_admin/admin.css
+++ b/web/css_admin/admin.css
@@ -67,14 +67,15 @@ a :hover
 
 .site-container
 {
-    overflow-y:auto;
+    overflow-y:hidden;
     overflow-x: hidden;
 
 }
 
-.header
-{
-    position:static}
+.header{
+    z-index: 10;
+    top:0;
+    position:fixed}
 
 .header__icon
 {
@@ -99,10 +100,10 @@ a :hover
 }
 
 .menu {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 85px;
-    bottom: 0;
+    height: 100%;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     background-color: #333;
@@ -135,7 +136,7 @@ a :hover
     transition-duration: 1.1s;
 }
 .reduit{
-
+overflow: hidden;
     transform:scale(1) translateX(-220px);
     transition-duration: 1s;
 }
@@ -209,4 +210,14 @@ a :hover
 .rotation .header__icon{
     transform: rotate(360deg) ;
     transition-duration: 1s;
+}
+
+.content-wrapper{
+    margin-left: 320px;
+    margin-top: 120px;
+    transition-duration: 1s;
+}
+.grand{
+    transition-duration: 1s;
+    margin-left: 100px;
 }
