--- a/src/FrontBundle/Resources/views/Default/quiz.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quiz.html.twig
@@ -65,7 +65,7 @@
     <script>
         var quizEngine = null;
         $(function () {
-            quizEngine = jsQuizEngine($('#jsQuizEngine'), { quizUrl: '{{ asset("quiz/default.htm") }}' });
+            quizEngine = jsQuizEngine($('#jsQuizEngine'), { quizUrl: '{{ asset("quiz/default.htm.twig") }}' });
         });
     </script>
 {% endblock %}
