Ajout des descriptions et indices pour les questions et description du quizz

--- a/src/FrontBundle/Resources/views/Default/quiz.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quiz.html.twig
@@ -35,8 +35,8 @@
                 </div>
                 <div class="pass-indicator">
                     <h1 data-bind="css: { 'text-success': quizPassed, 'text-danger': !quizPassed() }">
-                        <span data-bind="visible: quizPassed">OBTENUE</span>
-                        <span data-bind="visible: !quizPassed()">REFUSÉE</span>
+                        <span data-bind="visible: quizPassed">RÉUSSI</span>
+                        <span data-bind="visible: !quizPassed()">RATÉ</span>
                     </h1>
                 </div>
                 <div class="solutions">
