Ajout accueil connecté

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -23,9 +23,38 @@
 {% endblock %}
 
 {% block connected_content %}
-    <div class="twitter">
-        <a class="twitter-timeline"  href="https://twitter.com/search?q=%20%23GreenIT" data-widget-id="923817749377363968">#GreenIT</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <div class="container connecte">
+        <div class="row">
+            <div class="col-lg-6 gauche">
+                    <article class="article">
+                        <h3>L'important développement durable</h3>
+                        <p>Forme de développement économique  ayant pour objectif principal de
+                            concilier le progrès économique et social avec la préservation de l'environnement</p>
+                        <a href="http://www.side.developpement-durable.gouv.fr/" class="lien">en savoir plus</a>
+                    </article>
+                    <article class="article">
+                        <h3>Le numérique responsable : késako ?</h3>
+                        <p>Ensemble des Technologies de l’Information et de la Communication (TIC) éco-conçues,
+                            dont l’empreinte économique, écologique et sociale a été volontairement
+                            réduite et/ou qui aident l’humanité à atteindre les objectifs du développement durable.</p>
+                        <a href="https://www.greenit.fr/definition/" class="lien">en savoir plus</a>
+                    </article>
+                    <article class="article" >
+                        <h3>Et l'éco-conception dans tout cela ?</h3>
+                        <p>Consiste à bâtir des sites Internet en obtenant le meilleur compromis entre
+                            performance et réduction de l'impact sur l'environnement. </p>
+                        <a href="https://collectif.greenit.fr/" class="lien">en savoir plus</a>
+                    </article>
+
+            </div>
+            <div class="col-lg-1">
+            </div>
+            <div class="col-lg-5 droite">
+                <a class="twitter-timeline"  href="https://twitter.com/search?q=%20%23GreenIT" data-widget-id="923817749377363968">#GreenIT</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
 
