--- a/src/FrontBundle/Resources/views/Default/blog.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blog.html.twig
@@ -5,41 +5,43 @@
    {% if articles %}
         <section id="cd-timeline" class="cd-container">
            {% for article in articles %}
-               <div  class="cd-timeline-block">
-                   <div class="cd-timeline-img cd-picture">
-                   </div> <!-- cd-timeline-img -->
+               <a href="article/id={{ article.id }}" style="text-decoration: none;">
+                   <div  class="cd-timeline-block">
+                       <div class="cd-timeline-img cd-picture">
+                       </div> <!-- cd-timeline-img -->
 
-                   <div  class="cd-timeline-content">
-                       <div class="row">
-                           <h1>{{ article.title }}</h1>
+                       <div  class="cd-timeline-content">
+                           <div class="row">
+                               <h1>{{ article.title }}</h1>
 
-                       </div>
-                       <div class="row">
-                           <div class="col-lg-12">
-                               <article>
-                                   <p>{{ article.description }}</p>
-                               </article>
                            </div>
-                       </div>
-                       <div class="row">
-                           <p style="margin-bottom: 0px;margin-right: 20px;">
-                               <svg fill="#FFFFFF" height="35" viewBox="0 0 24 24" width="25" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle">
-                                   <path d="M0 0h24v24H0z" fill="none"/>
-                                   <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" fill="forestgreen"/>
-                               </svg>
-                             nb Vue
-                           </p>
-                           <p style="margin-bottom: 0px;">
-                               <svg fill="#FFFFFF" height="35" viewBox="0 0 24 24" width="25" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle">
-                                   <path d="M0 0h24v24H0z" fill="none"/>
-                                   <path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z" fill="forestgreen"/>
-                               </svg>
-                               {{ article.likes }}
-                           </p>
-                       </div>
-                       <span class="cd-date" style="padding-bottom:0px">{{ article.dateCreation|date('d/m/Y') }}</span>
-                   </div> <!-- cd-timeline-content -->
-               </div>
+                           <div class="row">
+                               <div class="col-lg-12">
+                                   <article>
+                                       <p>{{ article.description }}</p>
+                                   </article>
+                               </div>
+                           </div>
+                           <div class="row">
+                               <p style="margin-bottom: 0px;margin-right: 20px;">
+                                   <svg fill="#FFFFFF" height="35" viewBox="0 0 24 24" width="25" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle">
+                                       <path d="M0 0h24v24H0z" fill="none"/>
+                                       <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" fill="forestgreen"/>
+                                   </svg>
+                                 nb Vue
+                               </p>
+                               <p style="margin-bottom: 0px;">
+                                   <svg fill="#FFFFFF" height="35" viewBox="0 0 24 24" width="25" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle">
+                                       <path d="M0 0h24v24H0z" fill="none"/>
+                                       <path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z" fill="forestgreen"/>
+                                   </svg>
+                                   {{ article.likes }}
+                               </p>
+                           </div>
+                           <span class="cd-date" style="padding-bottom:0px">{{ article.dateCreation|date('d/m/Y') }}</span>
+                       </div> <!-- cd-timeline-content -->
+                   </div>
+               </a>
            {% endfor %}
 
         </section> <!-- cd-timeline -->
