--- a/web/css/home.css
+++ b/web/css/home.css
@@ -6,73 +6,75 @@
 h2 { margin-top: 20px !important;  color: white !important; }
 .rr > div  { text-align: center;   color: white !important;}
 
+@media screen and (min-width: 992px) {
 
-.rr {
-    position: relative;
-    height: 200px;
-    background-color: forestgreen;
-    opacity: 0.8;
-    transition-duration: 0.5s;
 
+    .rr {
+        position: relative;
+        height: 200px;
+        background-color: forestgreen;
+        opacity: 0.8;
+        transition-duration: 0.5s;
+
+    }
+    .rr-left {
+        z-index: 1;
+        float: left;
+        width: 55%;
+        margin-right: 15px;
+     }
+
+    .rr-right {
+        z-index: 2;
+        float: right;
+        width: 44%;
+        margin-left: 15px;
+    }
+
+    .rr:after, .rr:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 0;
+        height: 0;
+    }
+
+    .rr-left:after {
+        right: -10px;
+        border-left: 100px solid forestgreen;
+        border-bottom: 200px solid white;
+    }
+    .rr-right:before {
+        left: -100px;
+        border-right: 100px solid forestgreen;
+        border-top: 200px solid rgba(0, 0, 0, 0);
+    }
+
+    .rr-left > div {
+        margin-right: 100px;
+        margin-left: 50px;
+    }
+
+    .rr-right > div {
+        margin-right: 50px;
+        margin-left: 25px;
+    }
+
+    .rr:hover{
+        opacity: 1;
+
+    }
+    .rr-right:hover{
+        transform:scale(1) translateX(50px);
+        transition-duration: 1s;
+
+    }
+    .rr-left:hover{
+        transform:scale(1) translateX(-50px);
+        transition-duration: 1s;
+
+    }
 }
-.rr-left {
-    z-index: 1;
-    float: left;
-    width: 55%;
-    margin-right: 15px;
- }
-
-.rr-right {
-    z-index: 2;
-    float: right;
-    width: 44%;
-    margin-left: 15px;
-}
-
-.rr:after, .rr:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 0;
-    height: 0;
-}
-
-.rr-left:after {
-    right: -10px;
-    border-left: 100px solid forestgreen;
-    border-bottom: 200px solid white;
-}
-.rr-right:before {
-    left: -100px;
-    border-right: 100px solid forestgreen;
-    border-top: 200px solid rgba(0, 0, 0, 0);
-}
-
-.rr-left > div {
-    margin-right: 100px;
-    margin-left: 50px;
-}
-
-.rr-right > div {
-    margin-right: 50px;
-    margin-left: 25px;
-}
-
-.rr:hover{
-    opacity: 1;
-
-}
-.rr-right:hover{
-    transform:scale(1) translateX(50px);
-    transition-duration: 1s;
-
-}
-.rr-left:hover{
-    transform:scale(1) translateX(-50px);
-    transition-duration: 1s;
-
-}
-
 .connecte {
     margin-top: 40px;
 }
@@ -118,4 +120,24 @@ h2 { margin-top: 20px !important;  color: white !important; }
 iframe{
     height: 100%!important;
     width: 100%!important;
+}
+
+
+@media screen and (max-width: 992px) {
+    .rr {
+        background-color: forestgreen;
+        opacity: 0.8;
+        transition-duration: 1s;
+        margin-bottom: 50px;
+        font-size: 1.5em;
+    }
+
+    .rr h2 {
+        font-size: 1.5em;
+    }
+
+    .rr:hover {
+        opacity: 1;
+        transition-duration: 1s;
+    }
 }
