correction css menu burger mode mobile

--- a/web/css_TemplateBase/main.css
+++ b/web/css_TemplateBase/main.css
@@ -38,3 +38,8 @@ body{
     background-attachment:fixed;
 }
 
+.navbar-toggler, .navbar-toggler collapsed{
+    margin-top: 25px;
+    margin-bottom: 0px;
+}
+
