--- a/web/css/article.css
+++ b/web/css/article.css
@@ -1,3 +1,11 @@
+
+body{
+    background-image: url("timeline/css/arbre.png")!important;
+    background-color: white;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+}
+
 .commentaires h3 {
     border-bottom: solid 2px forestgreen;
     border-right: solid 2px forestgreen;
